My new great commit!

--- a/index.html
+++ b/index.html
@@ -6,64 +6,100 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>home</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href=".css/stylemaincontainer.css">
+       <!--div>  <link rel="stylesheet" href="./css/stylecardcontainer.css"> </div-->
     </head>
 
     <body>
-        <div class="container">
+        <div class="main-container">
 
-            <div class="card">
-                <img src="images/2.jpg" alt="">
-                <div>
-                    <p>Чубуреки</p>
-                    <p>25</p>
-                    <button></button>
-                </div>
+            <div class="left bar">
+
             </div>
 
-            <div class="card">
-                <img src="images/2.jpg" alt="">
-                <div>
-                    <p>Чубуреки</p>
-                    <p>25</p>
-                    <button></button>
-                </div>
-            </div>
+            <div class="container">
 
-            <div class="card">
-                <img src="images/2.jpg" alt="">
-                <div>
-                    <p>Чубуреки</p>
-                    <p>25</p>
-                    <button></button>
+                <div class="card">
+                    <a href="#"><img src="images/2.jpg" alt=""></a>
+                    <div class="info">
+                        <a href="#">
+                            <p>Чебуреки</p>
+                        </a>
+                        <a href="#">
+                            <p>25</p>
+                        </a>
+                        <button>Купить сейчай</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <img src="images/2.jpg" alt="">
-                <div>
-                    <p>Чубуреки</p>
-                    <p>25</p>
-                    <button></button>
+                <div class="card">
+                    <a href="#"><img src="images/2.jpg" alt=""></a>
+                    <div class="info">
+                        <a href="#">
+                            <p>Чебуреки</p>
+                        </a>
+                        <a href="#">
+                            <p>25</p>
+                        </a>
+                        <button>Купить сейчас</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <img src="images/2.jpg" alt="">
-                <div>
-                    <p>Чубуреки</p>
-                    <p>25</p>
-                    <button></button>
+                <div class="card">
+                    <a href="#"><img src="images/2.jpg" alt=""></a>
+                    <div class="info">
+                        <a href="#">
+                            <p>Чебуреки</p>
+                        </a>
+                        <a href="#">
+                            <p>25</p>
+                        </a>
+                        <button>Купить сейчас</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <img src="images/2.jpg" alt="">
-                <div>
-                    <p>Чубуреки</p>
-                    <p>25</p>
-                    <button></button>
+                <div class="card">
+                    <a href="##"><img src="images/2.jpg" alt=""></a>
+                    <div class="info">
+                        <a href="##">
+                            <p>Чебуреки</p>
+                        </a>
+                        <a href="##">
+                            <p>25</p>
+                        </a>
+                        <button>Купить сейчас</button>
+                    </div>
                 </div>
+
+                <div class="card">
+                    <a href="#"><img src="images/2.jpg" alt=""></a>
+                    <div class="info">
+                        <a href="#">
+                            <p>Чебуреки</p>
+                        </a>
+                        <a href="#">
+                            <p>25</p>
+                        </a>
+                        <button>Купить сейчас</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <a href="#"><img src="images/2.jpg" alt=""></a>
+                    <div class="info">
+                        <a href="#">
+                            <p>Чебуреки</p>
+                        </a>
+                        <a href="#">
+                            <p>25</p>
+                        </a>
+                        <button>Купить сейчас</button>
+                    </div>
+                </div>
+
+            </div>
+            <div class="right-bar">
+
             </div>
 
         </div>
