--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>home</title>
         <link rel="stylesheet" href="./css/stylemaincontainer.css">
-       <!--div>  <link rel="stylesheet" href="./css/stylecardcontainer.css"> </div-->
+        <!--link rel="stylesheet" href="./css/stylecardcontainer.css"-->
     </head>
 
     <body>
